--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -38,6 +39,7 @@ dependencies:
   cloud_firestore: ^3.1.17
   firebase_core: ^1.17.1
   fluttertoast: ^8.0.9
+  intl: ^0.17.0
 
   #flutter_core: ^1.0.2
 dev_dependencies:
