--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   fluttertoast: ^8.0.9
   intl: ^0.17.0
   date_format: ^2.0.6
+  image_picker: ^0.8.5+3
 
   #flutter_core: ^1.0.2
 dev_dependencies:
